# tutorials

./: .gitignore  README.md
CPP/MainArguments/: README.md  mainArguments.cpp  mainArguments.hpp
CommandLine/Bash-Linux/: Comparisons.sh  DateTime.sh  Echo.sh  Files.sh  Functions.sh  GetOS.sh  NetScan.sh  Parameters.sh  README.md  Randomisation.sh  Strings.sh  Variables.sh  dummy1.txt  dummy2.txt  gitCommands.sh
CommandLine/Bash-Linux/Commands/: Notes.txt
CommandLine/Bash-Linux/Settings/: .bash_usr_aliases  .bash_usr_functions  .bashrc
CommandLine/Batch-Windows/: ArithmeticOperations.bat  BubbleSort.bat  CountFiles.bat  DateTime.bat  EnableDelayedExpansion.bat  EnvironmentVariables.bat  Functions.bat  Parameters.bat  README.md  Randomisation.bat  Strings.bat  TimeCommands.bat  WindowsSettings.bat  cmdExist.bat  cmdForFiles.bat  cmdGoto.bat
CommandLine/Batch-Windows/Functions/: GetStringLength.bat  Notes-Batch-Functions.txt
CommandLine/Batch-Windows/Tools/: .gitignore
CommandLine/Batch-Windows/Utils/: CreateRandom.bat  DeleteAllFilesFolders.bat  Notes-Batch-Utils.txt
CommandLine/PowerShell-Windows/: DontCloseAfterExecution.ps1  ListWindowsApps.ps1  LockFile.ps1  MyFirstScript.ps1  Parameters.ps1
CommandLine/PowerShell-Windows/Network/: NetworkAdapters.ps1
Documents/: DailyReminder.txt
Games/Andrew-Perkis/Alfreds-Wyke-Simulator/: AWSimulatorForm.dfm  AWSimulatorForm.pas  AlfredsWykeSimulator.cfg  AlfredsWykeSimulator.dof  AlfredsWykeSimulator.dpr  AlfredsWykeSimulator.res  TODO.txt
Games/Andrew-Perkis/Cloud-Nine/: CloudNine.cfg  CloudNine.dof  CloudNine.dpr  CloudNine.res  CloudNineMain.dfm  CloudNineMain.pas  TODO.txt
Games/Delphi/ChocolateBox/: ChocolateBox.cfg  ChocolateBox.dof  ChocolateBox.dpr  ChocolateBox.res
Games/Delphi/GroupPartitions/: GroupPartitions.dof  GroupPartitions.dpr  GroupPartitions.res  GroupPartitionsForm.dfm  GroupPartitionsForm.pas  MusicalGroups_2020-10-06.txt
Games/Delphi/MemoryGame/: .gitignore  MemoryGame.cfg  MemoryGame.dof  MemoryGame.dpr  MemoryGame.dsk  MemoryGame.res
Graphics/Icons/: Notes.txt
Graphics/Sample-Image-Types/: ExampleEMF_52x52.emf  ExampleTIF_492x702.tif  ExampleWMF_410x503.wmf
IDEs/Delphi7/CreateGUID/: CreateGUID.dpr  CreateGuidForm.dfm  CreateGuidForm.pas
IDEs/Delphi7/DataTypes-D7/: .gitignore  DataTypes_D7.dpr
IDEs/Delphi7/SampleApplication/: SampleApplication.dof  SampleApplication.dpr  SampleApplication.res  SampleApplicationForm.dfm  SampleApplicationForm.pas
IDEs/Delphi7/SampleConsole/: SampleConsole.cfg  SampleConsole.dof  SampleConsole.dpr
IDEs/VisualStudio2003/DataTypes-VS2003/: .gitignore  DataTypes-VS2003.rc  DataTypes-VS2003.sln  DataTypes-VS2003.vcproj  DataTypes.cpp  resource.h
IDEs/VisualStudio2003/SampleConsole/: SampleConsole.cpp  SampleConsole.rc  SampleConsole.sln  SampleConsole.vcproj  resource.h
IDEs/VisualStudio2019/ConditionalCompilation/: .gitignore  ConditionalCompilation.cpp  ConditionalCompilation.sln  ConditionalCompilation.vcxproj  ConditionalCompilation.vcxproj.filters
IDEs/VisualStudio2019/DataTypes-VS2019/: .gitignore  DataTypes-VS2019.cpp  DataTypes-VS2019.sln  (+2 more)
Languages/CPP/: Dummy.cpp  HelloWorld.cpp  QuickTests.cpp
Languages/DotNet/: DotNetVersions.txt
Languages/Doxygen/: DoxygenTest.cpp
Languages/Markdown/: README.md
Languages/RTF/: Bold-Italic-Text.rtf  Comments.rtf  Font-Tables.rtf  HelloWorld-CourierNew-14pt.rtf  HelloWorld-MonotypeCorsiva-22pt-Centered.rtf  HelloWorld-MonotypeCorsiva-60pt-Italic-Bold-Centered.rtf  HelloWorld-TimesNewRoman-30pt.rtf  Special-Characters.rtf
Languages/SQL/: SQL-Basics.txt  SQL-TypeConversions.txt
Languages/VBA/: Notes-VBA-Code.txt
Languages/VisualBasic/: README.md
Libraries/OpenCV/: Notes-OpenCVtest.txt  OpenCVtest.cpp  TestSystem.cpp
Libraries/Qt/: Qt_QString.cpp
Libraries/SFML/: README.md
Libraries/SFML/SpaceInvaders/: .gitignore  CMakeLists.txt  main.cpp
Libraries/ffmpeg/: Notes-ffmpeg.txt
Libraries/spdlog/: README.md  common.h  formatter.h  logger.h  pattern_formatter-inl.h  spdlog-inl.h
Markdown/: README.md
OpenCV/: OpenCVtest.hpp  TestSystem.hpp
OpenGL/: run.sh
OpenGL/code/source/: CMakeLists.txt  testOpenGL.cpp
OperatingSystems/: README.md
Puzzles/: Notes-Puzzles-Details.txt  Notes-Puzzles.txt  Puzzle0009.doc
Puzzles/CPP/: ConsolePuzzles.cpp  ConsolePuzzles.sln  ConsolePuzzles.vcxproj  ConsolePuzzles.vcxproj.filters  helperFunctions.cpp  helperFunctions.h  puzzle0001.cpp  puzzle0001.h  puzzle0002.cpp  puzzle0004.cpp  puzzle0005.cpp  puzzle0006.cpp  puzzle0007.cpp  puzzle001.cpp  puzzle001.h  puzzle0010.cpp  puzzlePrototypes.h  stdafx.h
Puzzles/Delphi/: CoreClasses.pas  DelphiPuzzles.dof  DelphiPuzzles.dpr  PuzzlesMain.dfm  PuzzlesMain.pas  puzzle0001.dfm  puzzle0001.pas  puzzle0008.dfm  puzzle0008.pas  puzzle0009.dfm  puzzle0009.pas
SFML/: README.md
SFML/SpaceInvaders/: CMakeLists.txt  main.cpp
Tools/gprof/gprofEx1/: CMakeLists.txt  gprofExample.cpp  gprofExample.hpp  gprofExampleNew.cpp  gprofExampleNew.hpp
Utilities/Network/: HostsFile.txt
VisualStudioCode/CMake/CMakeTest/: CMakeLists.txt
VisualStudioCode/CMake/CMakeTest/src/: main.cpp  testClass.cpp  testClass.hpp
VisualStudioCode/CodeOnWindows/: Notes-CodeOnWindows.txt  helloWorld.cpp
VisualStudioCode/ConfigureTasks/: CMakeLists.txt  configureTasks.cpp  mainArguments.cpp
VisualStudioSolutions/: VisualStudioSolutions.sln
(+405 files in other folders)
